# informatics_laboratories_12

./: README.md  pyproject.toml
appendix/: report.docx
articles/: views.py
